# bidded-mvp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  bidded-financial-projections.pptx  pyproject.toml
docs/: demo-runbook.md
frontend/: .env.example  .gitignore  INTEGRATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
plans/: ralph-storie-plan.md
ralph/: BOOTSTRAP.md  CLAUDE.md  CODEX.md  COMPACTION.md  COPILOT.md  ITERATIVE.md  PROGRESS-GUIDE.md  prd.json  prd.json.example  progress.md  prompt.md  ralph.sh  state.json
scripts/: worktree_env_cleanup.sh  worktree_env_setup.sh
tests/: test_agent_output_schemas.py  test_agent_tool_policies.py  test_anthropic_client.py  test_anthropic_swarm_routing.py  test_api_server.py  test_auth.py  test_bid_document.py  test_bid_response_draft.py  test_bolagsverket.py  test_chunk_embedding_generation.py  test_cli.py  test_company_kb_pdf.py  test_company_knowledge_base.py  test_company_profile_evidence.py  test_company_website_import.py  test_contract_clause_classifier.py  test_contract_clause_coverage_audit.py  test_contract_clause_tags.py  test_decision_diff.py  test_decision_evidence_audit.py  test_decision_export.py  test_demo_company_seed.py  test_demo_environment_doctor.py  test_demo_smoke.py  test_demo_state_seed.py  test_document_chunk_retrieval.py  test_embedding_contract.py  test_evidence_locked_swarm.py  test_evidence_recall_audit.py  test_evidence_scout_coercion.py  test_evidence_scout_node.py  (+26 more)
(+180 files in other folders)
