[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "bidded"
version = "0.1.0"
description = "Agent core for evidence-backed bid/no-bid decisions in public procurement."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "json-repair>=0.30.0",
    "langgraph>=0.2.74",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "supabase>=2.11.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
embeddings = [
    "openai>=1.59.0",
]

[project.scripts]
bidded = "bidded.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
